@@ -128,7 +128,7 @@ int main(int argc, char *argv[])
 
 	/* create message thread to handle pings and such from slurmctld */
 	msg_thr = msg_thr_create(&desc.other_port);
-	desc.other_hostname = xshort_hostname();
+	/* desc.other_hostname is set by slurmctld */
 
 	xsignal(SIGHUP, _signal_while_allocating);
 	xsignal(SIGINT, _signal_while_allocating);
