@@ -8,6 +8,8 @@ documents those changes that are of interest to users and admins.
     SLURM_VERISON_MINOR and SLURM_VERSION_MICRO.
  -- Fixed handling of SIGPIPE in srun. Abort job.
  -- Fix bug introduced to MVAPICH plugin preventing use of TotalView debugger.
+ -- Modify slurmctld to get srun/salloc network address based upon the incoming
+    message rather than hostname set by the user command (more reliable).
 
 * Changes in SLURM 1.2.32
 =========================
